@@ -1,6 +1,9 @@
 #!/usr/bin/env bash
 
 echo "*** *** *** start test.sh *** *** ***"
+echo "*** *** *** start test.sh *** *** ***"
+echo "*** *** *** start test.sh *** *** ***"
+
 DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" >/dev/null 2>&1 && pwd )"
 cd $DIR
 
@@ -24,7 +27,6 @@ cd agentuser
 rm -rf target/ || true
 
 echo "*** *** *** Start lein test *** *** ***"
-export JAVA_TOOL_OPTIONS="-XX:+EnableDynamicAgentLoading -Djdk.attach.allowAttachSelf=true --add-opens=java.base/java.net=ALL-UNNAMED"
 
 lein test || true
 
